Bug 530172 - Prefer using Boolean.valueOf and Integer.ValueOf in GDBus
Change-Id: I76612df9a5585b1509d2920a6bc872701c0c5757
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>